# mlc

./: .gitignore  CMakeLists.txt  license  main.cpp  output.ll  readme.md  readme_en.md  test.cpp
Example/: all.mc  array.mc  aux2.mc  cond.ll  cond.mc  example1.c  hello.mc  main.mc  one.mc  resolver.mc  std.mc  struct.ll  struct.mc
Example/BuildOutput/: all.hash  all.ll  array.hash  array.ll  cond.hash  cond.ll  hello.hash  hello.ll  one.hash  one.ll  resolver.hash  resolver.ll  struct.hash  struct.ll
Example/std/: io.mc
Modules/: Compiler.cpp  Compiler.cppm  Process.cppm  Token.cpp  Token.cppm
Modules/Builder/: Builder.cpp  Builder.cppm
Modules/CAux/: caux.cppm
Modules/Formatter/: Cache.cpp  Formatter.cpp  Formatter.cppm  Pool.cppm
Modules/IRGen/: Condition.cpp  ExprGen.cpp  FuncGen.cpp  Generator.cpp  Generator.cppm  InitializerList.cpp  MemberAccess.cpp  Operator.cpp  Statement.cpp  SubScope.cpp  VarGen.cpp  keyword.cppm
Modules/IRGen/Expr/: Atom.cpp  ExprGen.cpp  Left.cpp
Modules/Parser/: Base.cpp  Experssion.cpp  Function.cpp  Parser.cpp  Parser.cppm  ParserDecl.cppm  Resolver.cpp  Struct.cpp  SubScope.cpp  Variable.cpp
Modules/Parser/Default/: Value.cpp
Modules/Parser/Expr/: Atom.cpp  Expr.cpp  Expr.cppm  Prepare.cpp
Modules/Prepare/: Prepare.cppm
Modules/Token/: Expression.cpp  Expression.cppm  Factory.cppm  Statement.cppm  Token.cpp  Token.cppm  TokenAux.cpp  Type.cpp  Type.cppm
Public/: Json.cppm  TaskFlow.cppm  public.cmake
Test/: expr.cpp  funcTest.cpp  test.cmake  test.cpp
lib/std/: io.json  io.mc  lib.mc
(+13 files in other folders)
